# rust-book-examples

./: Cargo.toml
src/: lib.rs  main.rs  rect.rs  square.rs
src/front_of_room/: hosting.rs
tests/: integration_test.rs
